# accountant-tools

./: .taurignore  package-lock.json  package.json  tailwind.config.js  todos.md  vite.config.ts
excercises/: test1.xlsx  test2.xlsx
public/fonts/: stylesheet.css
src/: App.svelte  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: diot_template.xlsx  pdf.html  temp_pdf.html
src-tauri/icons/: icon.icns
src-tauri/src/: globals.rs  main.rs  responses.rs
src-tauri/src/diot_file/: diot_file.rs  errors.rs  mod.rs
src-tauri/src/excel_differ/: errors.rs  excel_differ.rs  mod.rs  utils.rs
src-tauri/src/pdf_excel_extractor/: mod.rs  pdf_excel_extractor.rs  utils.rs
src-tauri/src/responses/: responses.rs
src/@types/store/: chatbot.d.ts
src/api/: batchDiot.service.ts  common.service.ts  interceptor.ts  types.d.ts
src/lib/Layout/: PageLayout.module.scss  PageLayout.svelte
src/lib/Sidebar/: Sidebar.module.scss  Sidebar.svelte  SidebarButton.svelte
src/modules/: common.ts
src/modules/Chatbot/: Chatbot.svelte  MenuItem.svelte  TutorialModal.svelte
src/modules/DiotBatch/: DiotBatch.svelte  DiotBatch.ts  MenuItem.svelte  TutorialModal.svelte
src/modules/ExcelDiffer/: ExcelDiffer.module.scss  ExcelDiffer.svelte  store.ts
src/modules/PdfExcelExtractor/: Home.svelte  MenuItem.svelte  (+9 more)
src/router/: AppRouter.svelte  routes.ts  types.d.ts
src/store/: app.store.ts  chatbot.store.ts  modal.store.ts  sidebar.store.ts  types.d.ts
src/styles/: fonts.scss  main.scss  test.module.scss  utils.scss
src/utils/: AnchorClickInterceptor.svelte
(+22 files in other folders)
