[package]
name = "accountants-tools-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
calamine = "0.19.1"
base64 = "0.21.0"
anyhow = "1.0.70"
data-encoding = "2.3.3"
thiserror = "1.0.40"
lazy_static = "1.4.0"
chrono = "0.4.19"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
